--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- header -->
         <header class="topbar">
             <div class="logo">
-               <a href="index.html"><img src="images/logo/Booki2.png" alt="logo_booki"></a>
+               <a href="index.html"><img src="images/logo/Booki.png" alt="logo_booki"></a>
             </div>
             <nav class="menu">
                 <a href="#section_main_cards" class="menu_active">Hébergements</a>
@@ -88,7 +88,7 @@
                     <div class="section_small_cards">
 
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Lits superposés ambiance industrielle">
+                            <img src="images/hebergements/marcus-loke.jpg" alt="Lits superposés ambiance industrielle">
                             <div class="container">
                                 <h3><b>Auberge La Canebière</b></h3>
                                 <p>Nuit à partir de 25<span>&euro;</span></p>
@@ -103,7 +103,7 @@
                         </a> 
                     
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Deux lits simples séparés ambiance cosy">
+                            <img src="images/hebergements/fred-kleber.jpg" alt="Deux lits simples séparés ambiance cosy">
                             <div class="container">
                                 <h3><b>Hôtel du Port</b></h3>
                                 <p>Nuit à partir de 52<span>&euro;</span></p>
@@ -118,7 +118,7 @@
                         </a> 
 
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre lit simple gris et doré ambiance chic et baroque">
+                            <img src="images/hebergements/reisetopia.jpg" alt="Chambre lit simple gris et doré ambiance chic et baroque">
                             <div class="container">
                                 <h3><b>Hôtel Les mouettes</b></h3>
                                 <p>Nuit à partir de 76<span>&euro;</span></p>
@@ -133,7 +133,7 @@
                         </a>
 
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Lit deux personnes bleu et blanc ambiance maritime">
+                            <img src="images/hebergements/annie-spratt.jpg" alt="Lit deux personnes bleu et blanc ambiance maritime">
                             <div class="container">
                                 <h3><b>Hôtel de La mer</b></h3>
                                 <p>Nuit à partir de 46<span>&euro;</span></p>
@@ -148,7 +148,7 @@
                         </a> 
 
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Deux lits superposés boisés ambiance rustique">
+                            <img src="images/hebergements/nicate-lee.jpg" alt="Deux lits superposés boisés ambiance rustique">
                             <div class="container">
                                 <h3><b>Auberge Le Panier</b></h3>
                                 <p>Nuit à partir de 23<span>&euro;</span></p>
@@ -163,7 +163,7 @@
                         </a> 
 
                         <a href="#" class="card">
-                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Deux lits simples séparés, sobres et classiques ">
+                            <img src="images/hebergements/febrian-zakaria.jpg" alt="Deux lits simples séparés, sobres et classiques ">
                             <div class="container">
                                 <h3><b>Hôtel Chez Amina</b></h3>
                                 <p>Nuit à partir de 96<span>&euro;</span></p>
@@ -191,7 +191,7 @@
                     <div class="section_sidebar_cards">
 
                         <a href="#" class="card_sidebar">
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="lit blanc deux personnes avec décoration dorée et verte">
+                            <img src="images/hebergements/emile-guillemot.jpg" alt="lit blanc deux personnes avec décoration dorée et verte">
                             <div class="container_sidebar">
                                 <div>
                                     <h3><b>Hôtel Le soleil du matin</b></h3>
@@ -208,7 +208,7 @@
                         </a>
 
                         <a href="#" class="card_sidebar">
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="lit blanc double et beige claire avec décoration industrielle grise et noire">
+                            <img src="images/hebergements/aw-creative.jpg" alt="lit blanc double et beige claire avec décoration industrielle grise et noire">
                             <div class="container_sidebar">
                                 <div>
                                     <h3><b>Chambre d'hôtes Au coeur de l'eau</b></h3>
@@ -225,7 +225,7 @@
                         </a>
 
                         <a href="#" class="card_sidebar">
-                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="lit deux personnes blanc et marron avec décoration boisée classique">
+                            <img src="images/hebergements/febrian-zakaria.jpg" alt="lit deux personnes blanc et marron avec décoration boisée classique">
                             <div class="container_sidebar">
                                 <div>
                                     <h3><b>Hôtel Bleu et Blanc</b></h3>
@@ -252,7 +252,7 @@
 
                     <article class="grids_main">
                         <a href="#">
-                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Bateaux dans le vieux port">
+                        <img src="images/activites/reno-laithienne.jpg" alt="Bateaux dans le vieux port">
                             <div class="grids_container">
                                 <h3>Vieux Port</h3>
                             </div>
@@ -261,7 +261,7 @@
 
                     <article class="grids_main"> 
                         <a href="#">
-                            <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                            <img src="images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
                             <div class="grids_container">
                                 <h3>Fort de Pomègues</h3>
                             </div>
@@ -270,7 +270,7 @@
 
                     <article class="grids_main">
                         <a href="#">
-                            <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Vue ensoleillée sur les Calanques">
+                            <img src="images/activites/kilyan-sockalingum.jpg" alt="Vue ensoleillée sur les Calanques">
                             <div class="grids_container">
                                 <h3>Parc national des Calanques</h3>
                             </div> 
@@ -279,7 +279,7 @@
 
                     <article class="grids_main">
                         <a href="#">
-                            <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Basilique Notre Dame de la Garde">
+                            <img src="images/activites/florian-wehde.jpg" alt="Basilique Notre Dame de la Garde">
                             <div class="grids_container">
                                 <h3>Notre-Dame-De-La-Garde</h3>
                             </div>
